--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,4 +6,5 @@ layout: default
 {% include portfolio_grid.html %}
 {% include team.html %}
 {% include timeline.html %}
+{% include services.html %}
 {% include contact.html %}
