add standwithua and layout changes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,11 @@
 ---
 layout: default
 ---
+{% include standwithukraine.html %}
 {% include navheader.html %}
 
 {% include portfolio_grid.html %}
 {% include team.html %}
-{% include timeline.html %}
 {% include services.html %}
+{% include timeline.html %}
 {% include contact.html %}
